# MOEX-news-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml  lint.yaml  push_docker_hub.yaml
app/: config.py  exception_handler.py  main.py  model.py  predict.py  schema.py  tests.py
app/model_ser/: model.joblib  moex_clean.csv  moex_pipeline.plk  pred.csv
docker/api/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docker/node/: Dockerfile
frontend/: bun.lockb  jsconfig.json  package-lock.json  package.json
frontend/config/: modules.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx
frontend/src/API/: Fetch.js
frontend/src/components/: ModelPlot.jsx  NavBar.jsx  Predict.jsx  PredictForm.jsx
frontend/src/components/styles/: NavBar.css
frontend/src/data/: enums.js  routes.js
frontend/src/pages/Error/: Error.jsx
frontend/src/pages/Home/: Home.jsx
frontend/src/pages/PredictDay/: PredictDay.jsx
frontend/src/pages/PredictDay/components/: PredictForm.js  PredictForm.jsx
frontend/src/pages/PredictInterval/: PredictInterval.jsx
frontend/src/pages/PredictInterval/components/: PredictForm.jsx
frontend/src/styles/: App.css  theme.css
notebook/: ProjectLisa.ipynb  studcamp_(7)_(2).ipynb
