[tool.poetry]
name = "app-team-a"
version = "0.1.0"
description = ""
authors = ["Alan <tyujn24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
